infra/k8s/ingress/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: app-ingress
  namespace: backend

spec:
  ingressClassName: traefik

  rules:
  - http:

      paths:
      - path: /api
        pathType: Prefix

        backend:
          service:
            name: backend-service

            port:
              number: 80

      - path: /
        pathType: Prefix

        backend:
          service:
            name: frontend-service

            port:
              number: 80
